# sqa-integral-method

./: .gitignore  CMakeLists.txt  README.md  dielectric.py
include/: 2d-sword.h  2dsw.h  2dsw_cavity.h  2dsw_commonFunctions.h
include/2d-sword_bits/: 2dsw_cavity.h  2dsw_commonFunctions.h  2dsw_surfaceMesh.h  2dsw_sword.h  2dsw_swordConstants.h  2dsw_sword_te_const.h  2dsw_sword_tm.h
python/: dielectric.py
src/: 2dsw_surfaceMesh.cpp
tests/: 2dsw_testCavity.cpp  2dsw_testCommonFunctions.cpp  2dsw_testSurfaceMesh.cpp  2dsw_testSword.cpp  2dsw_testSwordRootSearch.cpp  2dsw_testSwordTimingTM.cpp
